Fix avartar to be aligned with comments

--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -19,6 +19,7 @@
         display: flex;
         flex-direction: column;
         margin-left: 1rem;
+        flex: 1;
     }
 
     &__info{
