--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -20,7 +20,6 @@
 
     &__container{
         display: flex;
-        justify-content: center;
     }
 
     &__profile{
@@ -51,7 +50,7 @@
         @include tablet{
             height: 2.5rem;
             flex-direction: row;
-        }
+        } 
     }
 
     &__input{
